# rdxgraphics

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md  make_header.py  run.bat
Assets/: default.frag  default.vert  default_geo.frag  default_geo.geom  default_geo.vert  screen.frag  screen.vert
assets/shaders/: default.vert.h  screen.frag  screen.frag.h  screen.vert.h
cmake/: ImportDependencies.cmake
projects/rdxgraphics/shaders/: default.frag  default.frag.h  default.vert.h  screen.frag  screen.frag.h  screen.vert  screen.vert.h
projects/rdxgraphics/src/: RDX.cpp  RDX.h  RXGlobals.h  entrypoint.cpp  pch.h
projects/rdxgraphics/src/ECS/: Components.h  EntityManager.h
projects/rdxgraphics/src/ECS/Components/: BaseComponent.h  BoundingVolume.cpp  BoundingVolume.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  RandomComponents.h
projects/rdxgraphics/src/ECS/Systems/: BVHSystem.cpp  BVHSystem.h  CollisionSystem.cpp  CollisionSystem.h  RenderSystem.cpp  RenderSystem.h  TransformSystem.cpp
projects/rdxgraphics/src/GLFWWindow/: GLFWWindow.cpp  GLFWWindow.h
projects/rdxgraphics/src/GSM/: BaseScene.h  SceneManager.cpp
projects/rdxgraphics/src/GSM/Scenes/: CommonLayer.cpp  CommonLayer.h  Sandbox.cpp  Sandbox.h
projects/rdxgraphics/src/GSM/Scenes/Assignment1/: Assignment1.cpp
projects/rdxgraphics/src/GSM/Scenes/Assignment2/: Assignment2.cpp  Assignment2.h
projects/rdxgraphics/src/GSM/Scenes/Assignment3/: Assignment3.cpp
projects/rdxgraphics/src/GSM/Scenes/Assignment4/: Assignment4.cpp
projects/rdxgraphics/src/GUI/: BaseGUIWindow.h  GUI.cpp  GUI.h
projects/rdxgraphics/src/GUI/Windows/: EntityHierarchy.cpp  EntityHierarchy.h  Inspector.cpp  Inspector.h  Settings.cpp  Viewport.cpp  Viewport.h
projects/rdxgraphics/src/Graphics/: BasePass.cpp  BasePass.h  GraphicsCommon.h  Object.h  ObjectFactory.cpp  ObjectFactory.h  Shader.cpp  Shader.h  UniformBuffer.h
projects/rdxgraphics/src/Graphics/Passes/: BVHPass.cpp  BVHPass.h  BVLeafPass.cpp  BVLeafPass.h  BVWireframesPass.cpp  ColliderWireframesPass.cpp  ModelsPass.cpp  ModelsPass.h  Passes.h  ScreenPass.h
projects/rdxgraphics/src/Utils/: Input.cpp  Input.h  IntersectionTests.cpp  IntersectionTests.h  Logger.cpp  Logger.h  Rxuid.cpp  Rxuid.h
rdxgraphics/: CMakeLists.txt  RDX.cpp  RDX.h  RXGlobals.h  entrypoint.cpp  pch.h  rdxgraphics.cpp  rdxgraphics.h
rdxgraphics/Collision/: BoundingVolume.cpp  BoundingVolume.h  CollisionSystem.cpp  CollisionSystem.h
rdxgraphics/ECS/: BaseComponent.cpp  BaseComponent.h  Components.h  Entity.cpp  Entity.h  EntityManager.cpp  EntityManager.h
rdxgraphics/ECS/Components/: BaseComponent.cpp  BaseComponent.h  BoundingVolume.cpp  BoundingVolume.h  Camera.cpp  Camera.h  Collider.cpp  Collider.h  RandomComponents.h
rdxgraphics/ECS/Systems/: CollisionSystem.cpp  CollisionSystem.h  RenderSystem.cpp  RenderSystem.h  TransformSystem.cpp
rdxgraphics/Entity/: EntityManager.cpp  EntityManager.h
rdxgraphics/GLFWWindow/: GLFWWindow.cpp  GLFWWindow.h
rdxgraphics/GSM/: BaseScene.h  SceneManager.cpp  SceneManager.h
rdxgraphics/GSM/Scenes/: CommonLayer.cpp  CommonLayer.h  Sandbox.cpp  Sandbox.h
rdxgraphics/GSM/Scenes/Assignment1/: Assignment1.cpp  Assignment1.h
rdxgraphics/GUI/: BaseGUIWindow.h  GUI.cpp  GUI.h
rdxgraphics/GUI/Windows/: EntityHierarchy.cpp  EntityHierarchy.h  Inspector.cpp  Inspector.h  Settings.cpp  Settings.h  Viewport.cpp  Viewport.h
rdxgraphics/Graphics/: BasePass.cpp  BasePass.h  Camera.cpp  Camera.h  Object.cpp  Object.h  ObjectFactory.cpp  ObjectFactory.h  RenderPass.cpp  RenderPass.h  Shader.cpp  Shader.h  UniformBuffer.h
rdxgraphics/Graphics/Passes/: BVWireframesPass.cpp  BVWireframesPass.h  ColliderWireframePass.cpp  ColliderWireframePass.h  ColliderWireframesPass.cpp  ModelPass.cpp  ModelPass.h  ModelsPass.cpp  Passes.h  PiPPass.h  ScreenPass.cpp  ScreenPass.h
rdxgraphics/Rendering/: Camera.cpp  Camera.h  GraphicsCommon.h  Object.cpp  Object.h  RenderPass.cpp  RenderPass.h  RenderSystem.cpp  RenderSystem.h  Shader.cpp  Shader.h
rdxgraphics/Transformation/: TransformSystem.cpp  TransformSystem.h
rdxgraphics/Utils/: BaseSingleton.h  FramerateController.cpp  FramerateController.h  Input.cpp  Input.h  IntersectionTests.cpp  IntersectionTests.h  Logger.cpp  Logger.h  Rxuid.cpp  Rxuid.h
rdxgraphics/Utils/EventDispatcher/: EventDispatcher.h
shaders/: default.frag  default.vert  default.vert.h  my-shader.frag  screen.frag  screen.frag.h  screen.vert.h
src/: RDX.h  RXGlobals.h  pch.h
src/ECS/: EntityManager.cpp
src/ECS/Components/: BaseComponent.cpp  BaseComponent.h  BoundingVolume.h  Collider.cpp
src/ECS/Systems/: BVHSystem.cpp  RenderSystem.cpp  TransformSystem.cpp
src/GLFWWindow/: GLFWWindow.cpp
src/GSM/: SceneManager.h
src/GSM/Scenes/: CommonLayer.cpp
src/GSM/Scenes/Assignment1/: Assignment1.cpp
src/GSM/Scenes/Assignment3/: Assignment3.h
src/GSM/Scenes/Assignment4/: Assignment4.cpp  Assignment4.h
src/GUI/: GUI.cpp
src/GUI/Windows/: EntityHierarchy.cpp  Inspector.cpp  Settings.h
src/Graphics/: Object.cpp  ObjectFactory.cpp
src/Graphics/Passes/: BVLeafPass.cpp  ColliderWireframesPass.h  ScreenPass.cpp
